# klcc

./: cc.py  com.virgee.klcc.json  leglight  meson.build
data/: com.virgee.klcc.appdata.xml.in  com.virgee.klcc.desktop.in  com.virgee.klcc.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: klcc.gresource.xml  main.vala  meson.build  window.ui  window.vala
